press one per line

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <header class="container" id="header">
+<header class="container" id="header">
     <div class="row">
         <a href="index.html">
     	<h1 class="col-sm-4">Annemarie Mörl</h1>
@@ -29,32 +29,14 @@
         </nav>
     </div>
 </header>
-  <section class="container">
-    <div class="row">
-    	<figure class="col-sm-6">
-          <img src="images/1_7th1.png" alt=""/>
-    	</figure>
-    	<figure class="col-sm-6">
-    		<img src="images/1_7th2.jpg" alt=""/>
-      </figure>
-    </div>
-    <div class="row">
-    	<figure class="col-sm-6">
-          <img src="images/1_cpw2.jpg" alt=""/>
-    	</figure>
-    	<figure class="col-sm-6">
-    		<img src="images/1_cs1.png" alt=""/>
-      </figure>
-    </div>
-    <div class="row">
-    	<figure class="col-sm-6">
-          <img src="images/1_cs2.png" alt=""/>
-    	</figure>
-    	<figure class="col-sm-6">
-    		<img src="images/1_cs3.jpg" alt=""/>
-      </figure>
-    </div>
-  </section>
+<div class=container>
+<div class="row">
+<p class="col-sm-4">info@annemariemoerl.com</p>
+</div>
+<div class="row">
+<p class="col-sm-4">Dipl. Ing. Architekt Annemarie Mörl</p>
+</div>
+</div>
   <footer class="container">
   	<div class="row">
       <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
