add press, fix footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </figure>
     </div>
   </section>
-  <footer class="container">
+  <footer class="container navbar navbar-static-bottom">
   	<div class="row">
       <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
       <ul class="col-sm-8">
