--- a/resume.html
+++ b/resume.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <header class="container" id="header">
+    <header class="container navbar navbar-static-top" id="header">
     <div class="row">
         <a href="index.html">
-    	<h1 class="col-sm-4">Annemarie Mörl</h1>
+    	<h1 class="col-sm-4">resume</h1>
         </a>
         <nav class="col-sm-8 text-right">
             <a href="index.html">
@@ -31,8 +31,41 @@
     </div>
 </header>
   <section class="container">
+<p>PROFESSIONAL</p>
+
+<p><strong>Fractal Construction LLC</strong>, New York City<br>
+Project and Construction Manager</p>
+
+<p><strong>Derek Sanders Inc.</strong>, New York City<br>
+Project Architect</p>
+
+<p><strong><a href="http://www.steves-borsum.com/">Steves &amp; Borsum Architekten</a></strong>, Cologne, Germany<br>
+Student assistant</p>
+
+<p><strong>Tokyu Corporation</strong>, Tokyo, Japan<br>
+Summer intern</p>
+
+<p><strong>Schlösser Architekten</strong>, Cologne, Germany<br>
+Student assistant</p>
+
+<p><strong>Veit Petsch</strong>, Engelskirchen, Germany<br>
+Internship</p>
+
+<p> </p>
+
+<p>EDUCATION</p>
+
+<p><strong>NYU School of Continuing and Professional Studies (SCPS)</strong>, New York City<br>
+Construction Management</p>
+
+<p><strong>University of Applied Sciences Cologne</strong>, Germany<br>
+engineering diploma in architecture in July 07</p>
+
+<p><strong>Universidad de Las Palmas de Gran Canaria</strong>, Spain<br>
+study abroad</p>
+
   </section>
-  <footer class="container">
+  <footer class="container navbar navbar-static-bottom">
   	<div class="row">
       <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
       <ul class="col-sm-8">
