--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,10 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
-<header class="container" id="header">
+<header class="container navbar navbar-static-top" id="header">
     <div class="row">
         <a href="index.html">
-    	<h1 class="col-sm-4">Annemarie Mörl</h1>
+    	<h1 class="col-sm-4">contact</h1>
         </a>
         <nav class="col-sm-8 text-right">
             <a href="index.html">
@@ -29,15 +28,16 @@
         </nav>
     </div>
 </header>
+<body>
 <div class=container>
 <div class="row">
-<p class="col-sm-4">info@annemariemoerl.com</p>
+  <p class="col-sm-4"><a href="mailto:info@annemariemoerl.com">info@annemariemoerl.com</a></p>
 </div>
 <div class="row">
 <p class="col-sm-4">Dipl. Ing. Architekt Annemarie Mörl</p>
 </div>
 </div>
-  <footer class="container">
+  <footer class="container navbar navbar-fixed-bottom">
   	<div class="row">
       <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
       <ul class="col-sm-8">
