--- a/press.html
+++ b/press.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +11,7 @@
     <header class="container" id="header">
     <div class="row">
         <a href="index.html">
-    	<h1 class="col-sm-4">Annemarie Mörl</h1>
+    	<h1 class="col-sm-4">press</h1>
         </a>
         <nav class="col-sm-8 text-right">
             <a href="index.html">
@@ -38,16 +37,12 @@
     </li>
   </ul>
  <p class=col-sm-3>Der Architekt Bund Deutscher Architekten BDA, 05/11-03/12, bi-monthly column “foreign affairs” (D)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/radical.JPG" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Radical Renovations, Book, 02/13, “Hudson Valley Country House” (US)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/5_coverpage1-design-buereu.jpg" alt="">
@@ -62,16 +57,12 @@
     </li>
   </ul>
  <p class=col-sm-3>2012 Global Interior Design Annual, Book, 12/12, “Hudson Valley Country House”</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/5_perspective-december-2012page1.jpg" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Perspective, 12/12, “at home in the Hudson Valley” (HK)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/blank.jpg" alt="">
@@ -86,16 +77,12 @@
     </li>
   </ul>
  <p class=col-sm-3>OBJEKT, 09/12, “the hudson valley country house” (NL)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/5_bestinteriorscover.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Best Interiors, 08/12, “the hudson valley country house” (RU)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/5_woodcover.png" alt="">
@@ -110,16 +97,12 @@
     </li>
   </ul>
  <p class=col-sm-3>AC Décor, 06/12, “Essencia Invernal” (BRA)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/5_boiscover.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Architecture Bois, 07/12, “En kit deluxe” (FR)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/5_id-cover.jpg" alt="">
@@ -134,8 +117,6 @@
     </li>
   </ul>
  <p class=col-sm-3>AIT, 05/12, “Annemarie Mörl: Lehrjahre bei…” (D)</p>
-</div>
-<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="images/blank.jpg" alt="">
@@ -143,8 +124,8 @@
   </ul>
  <p class=col-sm-3>Kölnarchitektur A-Jugend, 05/08 „Absolventen Jetzt! Annemarie Mörl“ (D)</p>
 </div>
-  </section>
-  <footer class="container">
+</section>
+  <footer class="container navbar navbar-static-bottom">
   	<div class="row">
       <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
       <ul class="col-sm-8">
