swap linkedin logo

--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
       </figure>
     </div>
   </section>
-  <footer class="container navbar navbar-static-bottom">
-  	<div class="row">
-      <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-      <ul class="col-sm-8">
-	<li class="col-sm-1">
-          <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="images/linkedin.png" alt="LinkedIn">
-          </a>
-	</li>
-      </ul>
-    </div>
-	</footer>
+</section>
+<footer class="container navbar navbar-static-bottom">
+  <div class="row">
+    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+    <ul class="col-sm-8">
+      <li class="col-sm-1">
+        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
+          <img src="images/In-2C-66px-R.png" alt="LinkedIn">
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
