--- a/press.html
+++ b/press.html
@@ -10,7 +10,7 @@
 <body>
     <header class="container" id="header">
     <div class="row">
-        <a href="index.html">
+        <a href="press.html">
     	<h1 class="col-sm-4">press</h1>
         </a>
         <nav class="col-sm-8 text-right">
@@ -33,7 +33,7 @@
 <div class="row">
   <ul class="col-sm-1">
     <li>
-      <img src="images/blank.jpg" alt="">
+      <img src="images/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Der Architekt Bund Deutscher Architekten BDA, 05/11-03/12, bi-monthly column “foreign affairs” (D)</p>
@@ -65,7 +65,7 @@
  <p class=col-sm-3>Perspective, 12/12, “at home in the Hudson Valley” (HK)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/blank.jpg" alt="">
+      <img src="images/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>HomeStyle China, 11/12, “the hudson valley country house” (CN)</p>
@@ -73,7 +73,7 @@
 <div class="row">
   <ul class="col-sm-1">
     <li>
-      <img src="images/blank.jpg" alt="">
+      <img src="images/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>OBJEKT, 09/12, “the hudson valley country house” (NL)</p>
@@ -119,23 +119,23 @@
  <p class=col-sm-3>AIT, 05/12, “Annemarie Mörl: Lehrjahre bei…” (D)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/blank.jpg" alt="">
+      <img src="images/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Kölnarchitektur A-Jugend, 05/08 „Absolventen Jetzt! Annemarie Mörl“ (D)</p>
 </div>
 </section>
-  <footer class="container navbar navbar-static-bottom">
-  	<div class="row">
-      <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-      <ul class="col-sm-8">
-	<li class="col-sm-1">
-          <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="images/linkedin.png" alt="LinkedIn">
-          </a>
-	</li>
-      </ul>
-    </div>
-	</footer>
+<footer class="container navbar navbar-static-bottom">
+  <div class="row">
+    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+    <ul class="col-sm-8">
+      <li class="col-sm-1">
+        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
+          <img src="images/In-2C-66px-R.png" alt="LinkedIn">
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
