--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container navbar navbar-static-top" id="header">
     <div class="row">
-        <a href="index.html">
+        <a href="resume.html">
     	<h1 class="col-sm-4">resume</h1>
         </a>
         <nav class="col-sm-8 text-right">
@@ -65,17 +65,17 @@ engineering diploma in architecture in July 07</p>
 study abroad</p>
 
   </section>
-  <footer class="container navbar navbar-static-bottom">
-  	<div class="row">
-      <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-      <ul class="col-sm-8">
-	<li class="col-sm-1">
-          <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="images/linkedin.png" alt="LinkedIn">
-          </a>
-	</li>
-      </ul>
-    </div>
-	</footer>
+<footer class="container navbar navbar-static-bottom">
+  <div class="row">
+    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+    <ul class="col-sm-8">
+      <li class="col-sm-1">
+        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
+          <img src="images/In-2C-66px-R.png" alt="LinkedIn">
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
