--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <header class="container navbar navbar-static-top" id="header">
     <div class="row">
-        <a href="index.html">
+        <a href="contact.html">
     	<h1 class="col-sm-4">contact</h1>
         </a>
         <nav class="col-sm-8 text-right">
@@ -37,17 +37,17 @@
 <p class="col-sm-4">Dipl. Ing. Architekt Annemarie Mörl</p>
 </div>
 </div>
-  <footer class="container navbar navbar-fixed-bottom">
-  	<div class="row">
-      <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-      <ul class="col-sm-8">
-	<li class="col-sm-1">
-          <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="images/linkedin.png" alt="LinkedIn">
-          </a>
-	</li>
-      </ul>
-    </div>
-	</footer>
+<footer class="container navbar navbar-fixed-bottom">
+  <div class="row">
+    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+    <ul class="col-sm-8">
+      <li class="col-sm-1">
+        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
+          <img src="images/In-2C-66px-R.png" alt="LinkedIn">
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
