--- a/press.html
+++ b/press.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
     <header class="container" id="header">
@@ -30,96 +30,96 @@
     </div>
 </header>
   <section class="container">
-<div class="row">
-  <ul class="col-sm-1">
+<div class="row press-row">
+  <ul class="col-sm-1 press">
     <li>
-      <img src="images/blank.png" alt="">
+      <img src="img/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Der Architekt Bund Deutscher Architekten BDA, 05/11-03/12, bi-monthly column “foreign affairs” (D)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/radical.JPG" alt="">
+      <img src="img/radical.JPG" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Radical Renovations, Book, 02/13, “Hudson Valley Country House” (US)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_coverpage1-design-buereu.jpg" alt="">
+      <img src="img/5_coverpage1-design-buereu.jpg" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Design Bureau, 12/12, “Hudson Valley Country House” (US)</p>
 </div>
-<div class="row">
+<div class="row press-row">
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_coverpageglobal-interior-design-manual.jpg" alt="">
+      <img src="img/5_coverpageglobal-interior-design-manual.jpg" alt="">
     </li>
   </ul>
  <p class=col-sm-3>2012 Global Interior Design Annual, Book, 12/12, “Hudson Valley Country House”</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_perspective-december-2012page1.jpg" alt="">
+      <img src="img/5_perspective-december-2012page1.jpg" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Perspective, 12/12, “at home in the Hudson Valley” (HK)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/blank.png" alt="">
+      <img src="img/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>HomeStyle China, 11/12, “the hudson valley country house” (CN)</p>
 </div>
-<div class="row">
+<div class="row press-row">
   <ul class="col-sm-1">
     <li>
-      <img src="images/blank.png" alt="">
+      <img src="img/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>OBJEKT, 09/12, “the hudson valley country house” (NL)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_bestinteriorscover.png" alt="">
+      <img src="img/5_bestinteriorscover.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Best Interiors, 08/12, “the hudson valley country house” (RU)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_woodcover.png" alt="">
+      <img src="img/5_woodcover.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Wood Planet, 06/12, “the hudson valley country house” (KOR)</p>
 </div>
-<div class="row">
+<div class="row press-row">
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_artconcept-cover.png" alt="">
+      <img src="img/5_artconcept-cover.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>AC Décor, 06/12, “Essencia Invernal” (BRA)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_boiscover.png" alt="">
+      <img src="img/5_boiscover.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Architecture Bois, 07/12, “En kit deluxe” (FR)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_id-cover.jpg" alt="">
+      <img src="img/5_id-cover.jpg" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Interior Design Magazine, 10/11, “swim team” (US)</p>
 </div>
-<div class="row">
+<div class="row press-row">
   <ul class="col-sm-1">
     <li>
-      <img src="images/5_aitcover-2.jpg" alt="">
+      <img src="img/5_aitcover-2.jpg" alt="">
     </li>
   </ul>
  <p class=col-sm-3>AIT, 05/12, “Annemarie Mörl: Lehrjahre bei…” (D)</p>
   <ul class="col-sm-1">
     <li>
-      <img src="images/blank.png" alt="">
+      <img src="img/blank.png" alt="">
     </li>
   </ul>
  <p class=col-sm-3>Kölnarchitektur A-Jugend, 05/08 „Absolventen Jetzt! Annemarie Mörl“ (D)</p>
@@ -131,7 +131,7 @@
     <ul class="col-sm-8">
       <li class="col-sm-1">
         <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="images/In-2C-66px-R.png" alt="LinkedIn">
+          <img src="img/In-2C-66px-R.png" alt="LinkedIn">
         </a>
       </li>
     </ul>
