--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
     <header class="container navbar navbar-static-top" id="header">
@@ -71,7 +71,7 @@ study abroad</p>
     <ul class="col-sm-8">
       <li class="col-sm-1">
         <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="images/In-2C-66px-R.png" alt="LinkedIn">
+          <img src="img/In-2C-66px-R.png" alt="LinkedIn">
         </a>
       </li>
     </ul>
