--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         active: true,
         auto: true,
         interval: 4000,
-        swap: false,
+        swap: true,
 	effect: "fade",
 	pauseOnHover: true,
       },
