--- a/press.html
+++ b/press.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/slidejs.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
     <header class="container" id="header">
@@ -30,7 +32,7 @@
     </div>
 </header>
   <section class="container">
-<div class="row press-row">
+<div class="row">
   <ul class="col-sm-1 press">
     <li>
       <img src="img/blank.png" alt="">
@@ -50,7 +52,7 @@
   </ul>
  <p class=col-sm-3>Design Bureau, 12/12, “Hudson Valley Country House” (US)</p>
 </div>
-<div class="row press-row">
+<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="img/5_coverpageglobal-interior-design-manual.jpg" alt="">
@@ -70,7 +72,7 @@
   </ul>
  <p class=col-sm-3>HomeStyle China, 11/12, “the hudson valley country house” (CN)</p>
 </div>
-<div class="row press-row">
+<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="img/blank.png" alt="">
@@ -90,7 +92,7 @@
   </ul>
  <p class=col-sm-3>Wood Planet, 06/12, “the hudson valley country house” (KOR)</p>
 </div>
-<div class="row press-row">
+<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="img/5_artconcept-cover.png" alt="">
@@ -110,7 +112,7 @@
   </ul>
  <p class=col-sm-3>Interior Design Magazine, 10/11, “swim team” (US)</p>
 </div>
-<div class="row press-row">
+<div class="row">
   <ul class="col-sm-1">
     <li>
       <img src="img/5_aitcover-2.jpg" alt="">
