--- a/index.html
+++ b/index.html
@@ -1,85 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Annemarie Mörl</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" href="css/slidejs.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-</head>
-<body>
-    <header class="container" id="header">
-    <div class="row">
-        <a href="index.html">
-    	<h1 class="col-sm-4">Annemarie Mörl</h1>
-        </a>
-        <nav class="col-sm-8 text-right">
-            <a href="index.html">
-    	     <p>main</p>
-            </a>
-            <a href="resume.html">
-    	     <p>resume</p>
-            </a>
-            <a href="press.html">
-    	     <p>press</p>
-            </a>
-            <a href="contact.html">
-    	     <p>contact</p>
-            </a>
-        </nav>
-    </div>
-</header>
-  <section class="container">
-    <div id="slides">
-      <img src="img/1_7th1.png" alt="">
-      <img src="img/1_7th2.jpg" alt="">
-      <img src="img/1_7th3.jpg" alt="">
-      <img src="img/1_cpw2.jpg" alt="">
-      <img src="img/1_cs1.png" alt="">
-      <img src="img/1_cs2.png" alt="">
-      <img src="img/1_cs3.jpg" alt="">
-    </div>
-  </div>
-</section>
-<footer class="container navbar navbar-static-bottom">
-  <div class="row">
-    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-    <ul class="col-sm-8">
-      <li class="col-sm-1">
-        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="img/In-2C-66px-R.png" alt="LinkedIn">
-        </a>
-      </li>
-    </ul>
-  </div>
-</footer>
-<!-- SlidesJS Required: Link to jQuery -->
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<!-- End SlidesJS Required -->
+<!doctype html>
+<title>Site Maintenance</title>
+<style>
+  body { text-align: center; padding: 150px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
 
-<!-- SlidesJS Required: Link to jquery.slides.js -->
-<script src="js/jquery.slides.min.js"></script>
-<!-- End SlidesJS Required -->
-
-<!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
-<script>
-  $(function() {
-    $('#slides').slidesjs({
-      width: 650,
-      height: 423,
-      play: {
-        active: true,
-        auto: true,
-        interval: 4000,
-        swap: true,
-	effect: "fade",
-	pauseOnHover: true,
-      },
-    });
-  });
-</script>
-</body>
-</html>
+<article>
+    <h1>We&rsquo;ll be back soon!</h1>
+    <div>
+	    <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:info@annemariemoerl.com">contact me</a>, otherwise we&rsquo;ll be back online shortly!</p>
+        <p>&mdash; Annemarie M&ouml;rl</p>
+    </div>
+</article>
