--- a/index.html
+++ b/index.html
@@ -1,18 +1,82 @@
-<!doctype html>
-<title>Site Maintenance</title>
-<style>
-  body { text-align: center; padding: 150px; }
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
-</style>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Annemarie Mörl</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/slidejs.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-<article>
-    <h1>We&rsquo;ll be back soon!</h1>
-    <div>
-	    <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:info@annemariemoerl.com">contact me</a>, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; Annemarie M&ouml;rl</p>
+</head>
+<body>
+<div class="navbar navbar-default navbar-static-top" role="navigation">
+   <div class="container">
+     <div class="navbar-header">
+       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
+       <a class="navbar-brand" href="#">Annemarie Mörl</a>
+     </div>
+     <div class="navbar-collapse collapse">
+       <ul class="nav navbar-nav navbar-right">
+         <li class="active"><a href="index.html">main</a></li>       
+         <li><a href="resume.html">resume</a></li>
+         <li><a href="press.html">press</a></li>
+         <li><a href="contact.html">contact</a></li>
+       </ul>
+     </div><!--/.nav-collapse -->
+   </div>
+ </div>
+  <section class="container container-slides">
+    <div id="slides">
+      <img src="img/1_7th1.png" alt="">
+      <img src="img/1_7th2.jpg" alt="">
+      <img src="img/1_7th3.jpg" alt="">
+      <img src="img/1_cpw2.jpg" alt="">
+      <img src="img/1_cs1.png" alt="">
+      <img src="img/1_cs2.png" alt="">
+      <img src="img/1_cs3.jpg" alt="">
     </div>
-</article>
+  </div>
+</section>
+<footer class="container navbar navbar-static-bottom">
+  <div class="row">
+    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+    <ul class="col-sm-8">
+      <li class="col-sm-1">
+        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
+          <img src="img/In-2C-66px-R.png" alt="LinkedIn">
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.slides.min.js"></script>
+<script>
+  $(function() {
+    $('#slides').slidesjs({
+      width: 650,
+      height: 423,
+      play: {
+        active: false,
+        auto: true,
+        interval: 4000,
+        swap: true,
+	effect: "fade",
+	pauseOnHover: false,
+      },
+      navigation: {active: false},
+      pagination: {active: false},
+    });
+  });
+</script>
+</body>
+</html>
