--- a/press.html
+++ b/press.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" href="css/slidejs.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -32,127 +31,119 @@
      </div><!--/.nav-collapse -->
    </div>
  </div>
-  <section class="container container-slides">
-    <div id="slides">
-      <img src="img/1_7th1.png" alt="">
-      <img src="img/1_7th2.jpg" alt="">
-      <img src="img/1_7th3.jpg" alt="">
-      <img src="img/1_cpw2.jpg" alt="">
-      <img src="img/1_cs1.png" alt="">
-      <img src="img/1_cs2.png" alt="">
-      <img src="img/1_cs3.jpg" alt="">
-    </div>
   </div>
   <section class="container">
 <div class="row">
-  <ul class="col-sm-1 press">
-    <li>
-      <img src="img/blank.png" alt="">
+  <ul class="col-sm-4">
+    <li role="separator" class="divider">
+      <img src="img/5_architektur.jpg" alt="">
+      <figcaption class="figure-caption">Der Architekt Bund Deutscher Architekten BDA, 05/11-03/12, bi-monthly column “foreign affairs” (D)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Der Architekt Bund Deutscher Architekten BDA, 05/11-03/12, bi-monthly column “foreign affairs” (D)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/radical.JPG" alt="">
+      <figcaption class="figure-caption">Radical Renovations, Book, 02/13, “Hudson Valley Country House” (US)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Radical Renovations, Book, 02/13, “Hudson Valley Country House” (US)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_coverpage1-design-buereu.jpg" alt="">
+      <figcaption class="figure-caption">Design Bureau, 12/12, “Hudson Valley Country House” (US)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Design Bureau, 12/12, “Hudson Valley Country House” (US)</p>
 </div>
 <div class="row">
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_coverpageglobal-interior-design-manual.jpg" alt="">
+      <figcaption class="figure-caption">2012 Global Interior Design Annual, Book, 12/12, “Hudson Valley Country House</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>2012 Global Interior Design Annual, Book, 12/12, “Hudson Valley Country House”</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_perspective-december-2012page1.jpg" alt="">
+      <figcaption class="figure-caption">Perspective, 12/12, “at home in the Hudson Valley</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Perspective, 12/12, “at home in the Hudson Valley” (HK)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
-      <img src="img/blank.png" alt="">
+      <img src="img/5-homestyle.jpg" alt="">
+      <figcaption class="figure-caption">HomeStyle China, 11/12, “the hudson valley country house” (CN)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>HomeStyle China, 11/12, “the hudson valley country house” (CN)</p>
 </div>
 <div class="row">
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
-      <img src="img/blank.png" alt="">
+      <img src="img/5-objekt.jpg" alt="">
+      <figcaption class="figure-caption">OBJEKT, 09/12, “the hudson valley country house” (NL)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>OBJEKT, 09/12, “the hudson valley country house” (NL)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_bestinteriorscover.png" alt="">
+      <figcaption class="figure-caption">Best Interiors, 08/12, “the hudson valley country house” (RU)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Best Interiors, 08/12, “the hudson valley country house” (RU)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_woodcover.png" alt="">
+      <figcaption class="figure-caption">Wood Planet, 06/12, “the hudson valley country house” (KOR)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Wood Planet, 06/12, “the hudson valley country house” (KOR)</p>
 </div>
 <div class="row">
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_artconcept-cover.png" alt="">
+      <figcaption class="figure-caption">AC Décor, 06/12, “Essencia Invernal” (BRA)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>AC Décor, 06/12, “Essencia Invernal” (BRA)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_boiscover.png" alt="">
+      <figcaption class="figure-caption">Architecture Bois, 07/12, “En kit deluxe” (FR)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Architecture Bois, 07/12, “En kit deluxe” (FR)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_id-cover.jpg" alt="">
+      <figcaption class="figure-caption">Interior Design Magazine, 10/11, “swim team” (US)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Interior Design Magazine, 10/11, “swim team” (US)</p>
 </div>
 <div class="row">
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
     <li>
       <img src="img/5_aitcover-2.jpg" alt="">
+      <figcaption class="figure-caption">AIT, 05/12, “Annemarie Mörl: Lehrjahre bei…” (D)</figcaption>
     </li>
   </ul>
- <p class=col-sm-3>AIT, 05/12, “Annemarie Mörl: Lehrjahre bei…” (D)</p>
-  <ul class="col-sm-1">
+  <ul class="col-sm-4">
+    <li>
+      <img src="img/blank.png" alt="" style="width:137px;height:180px;">
+      <figcaption class="figure-caption">Kölnarchitektur A-Jugend, 05/08 „Absolventen Jetzt! Annemarie Mörl“ (D)</figcaption>
+    </li>
+  </ul>
+  <ul class="col-sm-4">
     <li>
       <img src="img/blank.png" alt="">
+      <figcaption class="figure-caption"></figcaption>
     </li>
   </ul>
- <p class=col-sm-3>Kölnarchitektur A-Jugend, 05/08 „Absolventen Jetzt! Annemarie Mörl“ (D)</p>
 </div>
 </section>
-<footer class="container navbar navbar-static-bottom">
-  <div class="row">
-    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-    <ul class="col-sm-8">
-      <li class="col-sm-1">
-        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="img/In-2C-66px-R.png" alt="LinkedIn">
-        </a>
-      </li>
-    </ul>
-  </div>
-</footer>
+<footer class="footer">
+  <div class="container text-center navbar-static-bottom">
+	  <div class="row">
+	<p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+	<p class='col-sm-10'>
+      <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank"><i class="fa fa-linkedin"></i></a>
+      </p>
+  </div><!--End container-->
+</footer><!--End footer 2-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.slides.min.js"></script>
 </body>
 </html>
