--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" href="css/slidejs.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -32,39 +31,25 @@
      </div><!--/.nav-collapse -->
    </div>
  </div>
-  <section class="container container-slides">
-    <div id="slides">
-      <img src="img/1_7th1.png" alt="">
-      <img src="img/1_7th2.jpg" alt="">
-      <img src="img/1_7th3.jpg" alt="">
-      <img src="img/1_cpw2.jpg" alt="">
-      <img src="img/1_cs1.png" alt="">
-      <img src="img/1_cs2.png" alt="">
-      <img src="img/1_cs3.jpg" alt="">
-    </div>
   </div>
-<div class=container>
+<div class="container">
 <div class="row">
-  <p class="col-sm-4"><a href="mailto:info@annemariemoerl.com">info@annemariemoerl.com</a></p>
+  <p class="col-sm-4"><a href="mailto:contact@annemariemoerl.com">contact@annemariemoerl.com</a></p>
 </div>
 <div class="row">
-<p class="col-sm-4">Dipl. Ing. Architekt Annemarie Mörl</p>
+<p class="col-sm-4">Dipl.-Ing. Architektin Annemarie Mörl</p>
 </div>
 </div>
-<footer class="container navbar navbar-fixed-bottom">
-  <div class="row">
-    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-    <ul class="col-sm-8">
-      <li class="col-sm-1">
-        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="img/In-2C-66px-R.png" alt="LinkedIn">
-        </a>
-      </li>
-    </ul>
-  </div>
-</footer>
+<footer class="footer">
+  <div class="container text-center navbar-fixed-bottom">
+	  <div class="row">
+	<p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+	<p class='col-sm-10'>
+      <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank"><i class="fa fa-linkedin"></i></a>
+      </p>
+  </div><!--End container-->
+</footer><!--End footer 2-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.slides.min.js"></script>
 </body>
 </html>
