--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@ Project and Construction Manager</p>
 <p><strong>Derek Sanders Inc.</strong>, New York City<br>
 Project Architect</p>
 
-<p><strong><a href="http://www.steves-borsum.com/">Steves &amp; Borsum Architekten</a></strong>, Cologne, Germany<br>
+<p><strong>Steves &amp; Borsum Architekten</strong>, Cologne, Germany<br>
 Student assistant</p>
 
 <p><strong>Tokyu Corporation</strong>, Tokyo, Japan<br>
@@ -78,18 +78,15 @@ engineering diploma in architecture in July 07</p>
 study abroad</p>
 
   </section>
-<footer class="container navbar navbar-static-bottom">
-  <div class="row">
-    <p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
-    <ul class="col-sm-8">
-      <li class="col-sm-1">
-        <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank">
-          <img src="img/In-2C-66px-R.png" alt="LinkedIn">
-        </a>
-      </li>
-    </ul>
-  </div>
-</footer>
+<footer class="footer">
+  <div class="container navbar-static-bottom">
+	  <div class="row">
+	<p class="col-sm-4">&copy; 2016 Annemarie Mörl</p>
+	<p class='col-sm-10'>
+      <a href="https://www.linkedin.com/in/annemarie-moerl-8b347330" target="_blank"><i class="fa fa-linkedin"></i></a>
+      </p>
+  </div><!--End container-->
+</footer><!--End footer 2-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.slides.min.js"></script>
