--- a/resume.html
+++ b/resume.html
@@ -46,6 +46,9 @@
   <section class="container">
 <p>PROFESSIONAL</p>
 
+<p><strong>HousehamHenderson</strong>, Berlin, Germany<br>
+Team Leader</p>
+
 <p><strong>Fractal Construction LLC</strong>, New York City<br>
 Project and Construction Manager</p>
 
