--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
   <section class="container">
 <p>PROFESSIONAL</p>
 
-<p><strong>HousehamHenderson</strong>, Berlin, Germany<br>
+<p><strong>Hyphen (formerly HousehamHenderson)</strong>, Berlin, Germany<br>
 Team Leader</p>
 
 <p><strong>Fractal Construction LLC</strong>, New York City<br>
