--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
   <p class="col-sm-4"><a href="mailto:contact@annemariemoerl.com">contact@annemariemoerl.com</a></p>
 </div>
 <div class="row">
-<p class="col-sm-4">Dipl.-Ing. Architektin Annemarie Mörl</p>
+<p class="col-sm-4">Dipl.-Ing. Architektin Annemarie Mörl, LEED GA</p>
 </div>
 </div>
 <footer class="footer">
